# masuite

./: .gitignore  Cost Matrices.ipynb  TODO.md  examples  masuite.txt  pyproject.toml  readme.md  setup.py  test.sh
examples/: 1_simple_pg.py  gridhunter_gridsearch.py  simple_stac_pg.py  smallsoccer_gridsearch.py  soccer_gridsearch.py
lab/: 20210803-bubble-world.ipynb  202110-gridhunter.pkl  20211028-load-checkpoint.ipynb  20211104-plot-gridhunter.ipynb
masuite/: __init__.py  masuite.py  sweep.py
masuite/agents/: base.py  experiment.py  readme.md
masuite/algos/: experiment.py  readme.md
masuite/algos/pytorch/: __init__.py  (+2 more)
masuite/analysis/: Cost Matrices.ipynb  Gridhunter_data.ipynb  Prisoners_data.ipynb  Soccergrid_data.ipynb  dataplotting.ipynb  eloscore.ipynb  play_human.py  raw_df_extractor.ipynb  readme.md  score.ipynb  tournament_demo.py
masuite/baselines/: experiment.py  readme.md
masuite/environments/: __init__.py  base.py  cartpole.py  cartpole2p.py  gridhunter.py  gridworld.py  kuhn_poker.py  lqgame.py  lqgame_test.py  quadgame.py  quadratic_2_player.py  readme.md  smallsoccer.py  soccer.py
masuite/experiments/: analysis.py  envutils.py  gridhunter.py
masuite/logging/: __init__.py  base.py  csv_logging.py  terminal_logging.py
masuite/utils/: deprecated_logging.py  envutils.py  gridsearch.py  logging.py  plotting.py  systems.py  wrappers.py
notebooks/: gridsearchexample.ipynb  plotting_tests.ipynb  soccer_experiments.ipynb  soccer_gridsearch_analysis.ipynb  soccer_results.ipynb
notebooks/lqgame/: LQ_Game_leave_stable_set_with_plots.ipynb
(+63 files in other folders)
